[gd_scene load_steps=14 format=3 uid="uid://oy1byqrfs26e"]

[ext_resource type="Script" uid="uid://fi7ivwxmi1mr" path="res://scenes/dice_info_shop.gd" id="1_eohv8"]
[ext_resource type="PackedScene" uid="uid://c4x5tkis316mh" path="res://scenes/colored_container.tscn" id="1_qf42e"]
[ext_resource type="PackedScene" uid="uid://cbmn5tiw3fr6c" path="res://scenes/custom_label.tscn" id="2_y4m1l"]
[ext_resource type="Script" uid="uid://bmx3ays57ef7r" path="res://scenes/focus_container.gd" id="3_ou0lp"]
[ext_resource type="PackedScene" uid="uid://d26hs8spvqyjy" path="res://scenes/custom_button.tscn" id="3_whrbq"]
[ext_resource type="Texture2D" uid="uid://dqq0bo56wwdod" path="res://assets/grabber.png" id="6_8378g"]
[ext_resource type="Shader" uid="uid://hi56rfnncpf1" path="res://scenes/dice_machine.gdshader" id="6_n6wy1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i1xg8"]
shader = ExtResource("6_n6wy1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6wy1"]
bg_color = Color(0.353422, 0.688174, 0.387422, 1)

[sub_resource type="Animation" id="Animation_8378g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("modal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eohv8"]
resource_name = "in"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("modal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n6wy1"]
resource_name = "out"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("modal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6wy1"]
_data = {
&"RESET": SubResource("Animation_8378g"),
&"in": SubResource("Animation_eohv8"),
&"out": SubResource("Animation_n6wy1")
}

[node name="dice_info_shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eohv8")

[node name="colored_container" parent="." instance=ExtResource("1_qf42e")]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 472.0
offset_bottom = 0.0
grow_vertical = 2
color_role = 2

[node name="MarginContainer" type="MarginContainer" parent="colored_container"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="colored_container" parent="colored_container/MarginContainer" instance=ExtResource("1_qf42e")]
layout_mode = 2
color_role = 2

[node name="MarginContainer" type="MarginContainer" parent="colored_container/MarginContainer/colored_container"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="colored_container/MarginContainer/colored_container/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DiceNameLabel" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_y4m1l")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "THIS IS"
autowrap_mode = 3
custom_color = Color(0.776471, 0, 0, 1)
font_size = 64
label_text = "Fire dice"

[node name="spacer" type="Control" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="PriceLabel" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_y4m1l")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "THIS IS"
color_role = 1
custom_color = Color(0.776471, 0, 0, 1)
font_size = 32
label_text = "Fire dice"

[node name="MarginContainer" type="MarginContainer" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="DiceDescLabel" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource("2_y4m1l")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
autowrap_mode = 2
custom_color = Color(0.776471, 0, 0, 1)
label_text = "Lorem ipsum dumLorem ipsum dumLorem ipsum dumLorem ipsum dumLorem ipsum dumLorem ipsum dum"

[node name="DiceLoreLabel" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer" instance=ExtResource("2_y4m1l")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "THIS IS ELON MUSK
"
autowrap_mode = 2
color_role = 1
custom_color = Color(0.776471, 0, 0, 1)
label_text = "it doesn't seem to have lore yet..."

[node name="HBoxContainer" type="HBoxContainer" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="spacer" type="Control" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 35

[node name="focus_container" type="HBoxContainer" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_ou0lp")
horizontal = true

[node name="finance_button" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/focus_container" instance=ExtResource("3_whrbq")]
layout_mode = 2
horizontal = true
label_text = "Finance (gambling)"

[node name="pay_button" parent="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/focus_container" instance=ExtResource("3_whrbq")]
layout_mode = 2
horizontal = true
label_text = "Pay"

[node name="modal" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 300
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" parent="modal" instance=ExtResource("1_qf42e")]
self_modulate = Color(1, 1, 1, 0.796078)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
color_role = 2

[node name="MarginContainer" type="MarginContainer" parent="modal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="colored_container" parent="modal/MarginContainer" instance=ExtResource("1_qf42e")]
layout_mode = 2
color_role = 3
outline_enabled = true
outline_color_role = 0
outline_thickness = 4

[node name="MarginContainer" type="MarginContainer" parent="modal/MarginContainer/colored_container"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="modal/MarginContainer/colored_container/MarginContainer"]
layout_mode = 2

[node name="TitleUnmutableLabel" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer" instance=ExtResource("2_y4m1l")]
layout_mode = 2
font_size = 32
label_text = "my kid? gambling?"

[node name="MutableThingy" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer" instance=ExtResource("2_y4m1l")]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
label_text = "my kid? gambling?"

[node name="GamblingAdvice" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer" instance=ExtResource("2_y4m1l")]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
color_role = 1
label_text = "most quit before winning big..."

[node name="GamblingText" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer" instance=ExtResource("2_y4m1l")]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
label_text = "most quit before winning big..."

[node name="MarginContainer" type="MarginContainer" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SliderContainer" type="VBoxContainer" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_ou0lp")
slider_only = true
wrap_around_bottom = false
no_wrap = true

[node name="Slider" type="HSlider" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer/SliderContainer"]
unique_name_in_owner = true
z_index = 10
texture_filter = 1
material = SubResource("ShaderMaterial_i1xg8")
instance_shader_parameters/accent_replaced_color = Color(0, 0.694118, 0, 1)
instance_shader_parameters/replace_color_to_accent = Color(0, 0, 0.909804, 1)
instance_shader_parameters/replace_color_to_background = Color(0, 0.631373, 0, 1)
instance_shader_parameters/replace_color_to_primary = Color(0.713726, 0, 0, 1)
instance_shader_parameters/replace_color_to_secondary = Color(0.976471, 0.760784, 0.172549, 1)
instance_shader_parameters/secondary_replaced_color = Color(0.647059, 0, 0, 1)
layout_mode = 2
theme_override_icons/grabber = ExtResource("6_8378g")
theme_override_styles/slider = SubResource("StyleBoxFlat_n6wy1")
step = 5.0

[node name="colored_container" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer/SliderContainer/Slider" instance=ExtResource("1_qf42e")]
z_index = -1
layout_mode = 0
offset_top = 4.0
offset_right = 190.0
offset_bottom = 12.0

[node name="MarginContainer" type="MarginContainer" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer/SliderContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer/SliderContainer/MarginContainer"]
layout_mode = 2

[node name="start" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer/SliderContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_y4m1l")]
layout_mode = 2
label_text = "0% (of your money)"

[node name="spacer" type="Control" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer/SliderContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="end" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer/SliderContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_y4m1l")]
layout_mode = 2
label_text = "100%"

[node name="ButtonModalContainer" type="VBoxContainer" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("3_ou0lp")
active = false
wrap_around_top = false
no_wrap = true

[node name="continue_button" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/ButtonModalContainer" instance=ExtResource("3_whrbq")]
layout_mode = 2
label_text = "Continue"

[node name="cancel_button" parent="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/ButtonModalContainer" instance=ExtResource("3_whrbq")]
layout_mode = 2
label_text = "Cancel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n6wy1")
}

[connection signal="pressed" from="colored_container/MarginContainer/colored_container/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/focus_container/finance_button" to="." method="_on_finance_button_pressed"]
[connection signal="reached_end" from="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/MarginContainer/SliderContainer" to="." method="_on_slider_container_reached_end"]
[connection signal="reached_beginning" from="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/ButtonModalContainer" to="." method="_on_button_modal_container_reached_beginning"]
[connection signal="pressed" from="modal/MarginContainer/colored_container/MarginContainer/VBoxContainer/ButtonModalContainer/cancel_button" to="." method="_on_cancel_button_pressed"]
